--- a/css/theme-light.css
+++ b/css/theme-light.css
@@ -22,7 +22,7 @@
   --text-secondary-hover: #374151;
   --text-secondary-active: #374151;
   --text-tertiary: #5B6370;
-  --text-disabled: #6B7280;
+  --text-disabled: #525A68;
   --text-onbrand: #FFFFFF;
   --text-onaccent: #FFFFFF;
 
@@ -33,7 +33,7 @@
   --icon-secondary-hover: #374151;
   --icon-secondary-active: #374151;
   --icon-tertiary: #5B6370;
-  --icon-disabled: #6B7280;
+  --icon-disabled: #525A68;
   --icon-onbrand: #FFFFFF;
   --icon-onaccent: #FFFFFF;
 
